update Dockerfile, draft compose

--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,5 +1,5 @@
 FROM postgres:alpine
-ENV POSTGRES_USER 
-ENV POSTGRES_PASSWORD
-ENV POSTGRES_DB
+ENV POSTGRES_USER postgres
+ENV POSTGRES_PASSWORD 123
+ENV POSTGRES_DB testdb
 EXPOSE 5432
