--- a/k8s/staging-deployment.yaml
+++ b/k8s/staging-deployment.yaml
@@ -16,6 +16,15 @@ spec:
     spec:
       containers:
       - name: staging-nodejs-app
-        image: dummy-repository/staging-nodejs-app
-        ports:
-        - containerPort: 8080
+      image: dummy-repository/staging-nodejs-app
+      ports:
+      - containerPort: 8080
+      env:
+        - name: DB_HOST
+          value: postgres
+        - name: DB_USER
+          value: postgres
+        - name: DB_PASSWORD
+          value: 123
+        - name: DB_NAME
+          value: testdb
